# FastAPI

./: .coverage  .env  .env-non-dev  .env_non_dev  .gitignore  .hintrc  Dockerfile  Dockerfile.nginx  Jenkinsfile  README.md  alembic.ini  docker-compose.yml  grafana-dashboard.json  k8s.yml  k8s_celery.yml  nginx.conf  pyproject.toml  pytest.ini  pyvenv.cfg  requirements.txt  tailwind.config.js  weather_pb2.py
Scripts/: activate  activate.bat  activate.fish  activate.nu
ansible/: inventory  playbook.yml
app/: .gitignore  config.py  conftest.py  database.py  exceptions.py  loger.py  main.py  weather_pb2.py  weather_pb2_grpc.py
app/S3/: router.py  s3client.py
app/admin/: auth.py  views.py
app/bookings/: dao.py  models.py  router.py  schemas.py
app/cart/: dao.py  models.py  router.py  schemas.py
app/dao/: base.py
app/favourites/: dao.py  models.py  router.py  schemas.py
app/hotels/: dao.py  models.py  router.py  schemas.py
app/hotels/rooms/: dao.py  models.py  router.py  schemas.py
app/images/: router.py
app/importer/: router.py  utils.py
app/logs/: fastapi-efk.log.2024-08-03  fastapi-efk.log.2024-08-07  fastapi-efk.log.2024-08-11  fastapi-efk.log.2024-08-24  fastapi-efk.log.2024-09-01  fastapi-efk.log.2024-09-02  fastapi-efk.log.2024-10-08  fastapi-efk.log.2024-10-09
app/migrations/: env.py
app/migrations/versions/: 1ae0b1c64665_upgrade_cart_and_booking_table.py  8120711671ba_add_relationship_at_favourites.py  832114cf2083_.py  89dcaef0b1ab_create_tables.py  906f56680a59_create_table.py  90adf8ac3bdc_create_all_tables.py  a4f7cfa09f8f_created_favourites_table.py  b63c9f365843_create_cart_table.py  d70048634620_create_carts.py  e1aa3a26f9ef_create_rate_in_bookings.py  e43399bb6bd5_add_rate_in_hotels.py  f262179c2202_create_cart_table.py  fcef74c1e0b7_upgrade_db.py
app/pages/: dependencies.py  router.py
app/prometheus/: router.py
app/static/css/: app.css  main.css  menu.css
app/static/js/: add_booking.js  cancel.js  class-tools.js  loginUser.js  logoutUser.js  refresh_nav.js  regUser.js  scripts.js  ws.js
app/tailwindcss/: package-lock.json  package.json  tailwind.config.js
app/tasks/: celery.py  email_templates.py  scheduled.py  tasks.py
app/templates/: all_anon_fav.html  all_my_fav.html  all_my_fav_by_date.html  anon_booking.html  anon_cart.html  base.html  booking.html  booking_reserve.html  change_password.html  clear.html  edit_personal.html  exp.html  experiments.html  hotel.html  hotels.html  hotels_by_loc_and_time.html  index.html  loc_list.html  login.html  my_bookings.html  my_cart.html  next_anon_fav.html  next_my_fav.html  personal_account.html  personal_account_archive.html  personal_account_archive_by_date.html  personal_account_archive_next.html  popular.html  rate.html  register.html  rooms_by__time.html  search_hotels.html  ws.html
app/test_session/: session.py
app/tests/: conftest.py  mock_bookings.json  mock_hotels.json  mock_rooms.json  mock_users.json
app/tests/integration_tests/test_bookings/: test_api.py  test_api_book.py  test_dao.py  test_dao_book.py
app/tests/integration_tests/test_carts/: test_api_cart.py  test_dao.py  test_dao_cart.py
app/tests/integration_tests/test_favs/: test_dao.py  test_dao_fav.py
app/tests/integration_tests/test_hotels/: test_api.py  test_api_hotel.py
app/tests/integration_tests/test_users/: test_api.py  test_api_user.py
app/tests/integration_tests/test_users/test_bookings/: test_dao.py  test_dao_book_1.py
app/tests/unit_tests/test_users/: test_dao.py
app/users/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
app/weather/: dao.py  schemas.py  service.py
app/web_socket/: router.py
docker/: app.sh  celery.sh
fastapi-logs/: fastapi-efk.log.2024-08-02  fastapi-efk.log.2024-08-03  fastapi-efk.log.2024-08-11  fastapi-efk.log.2024-08-22  fastapi-efk.log.2024-09-01  fastapi-efk.log.2024-09-02
filebeat/: Dockerfile  filebeat.yml
protobufs/: weather.proto
