[tool.poetry]
name = "fastapi"
version = "0.1.0"
description = ""
authors = ["olegd96 <chepalin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-jose = "^3.3.0"
bcrypt = "^4.1.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
